<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">colloquium3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_wallet_exchange">WalletExchangeActivity</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="current_wallet">Current Wallet</string>
    <string name="current_amount">Current amount</string>
    <string name="roubles">RUB</string>
    <string name="rubles_amount">Rubles amount</string>
    <string name="current_course">Current course</string>

</resources>
